--- a/web/base.css
+++ b/web/base.css
@@ -9,6 +9,7 @@
   --colour-block: #eee;
   --colour-accent: #ffb53c;
   --colour-accent-trans: #fff9bf62;
+  --colour-accent-soft: #ffe5bb;
   --colour-highlight: #fff;
 
   --colour-mid-grey: #a6acbe;
@@ -35,6 +36,7 @@
     --colour-text: #dde;
     --colour-block: #080808;
     --colour-accent-trans: #f8d9a82a;
+    --colour-accent-soft: #422900;
     --colour-highlight: #1d1d1d;
     --colour-mid-grey: #a6acbe;
   }
@@ -209,7 +211,8 @@ main {
 
 .title-card {
   font-size: 24px;
-  margin: 1rem;
+  padding: 1rem;
+  margin: 0;
 }
 
 /* utility classes that (should) be able to be re used in a lot of pages) */
@@ -416,7 +419,9 @@ input[type="checkbox"]:checked + label {
   padding: 1rem;
 }
 
-.modal-form :not(label):not(div),
+.modal-form input,
+.modal-form select,
+.modal-form textarea,
 .input {
   border: 2px solid var(--colour-accent);
   border-radius: 0.5rem;
