--- a/web/project/style.css
+++ b/web/project/style.css
@@ -86,6 +86,8 @@
 
 /* CIRCULAR PROGRESS BAR */
 
+/* PROGRESS SPINNER */
+
 .spinner-parent {
   position: relative;
   display: flex;
@@ -98,6 +100,10 @@
   border-radius: 100vh;
   isolation: isolate;
   --width: calc(25% / 2);
+}
+
+.spinner {
+  --prog: var(--progress, 60%);
 }
 
 @property --prog {
