Kanban mobile dropdown no js

--- a/web/base.css
+++ b/web/base.css
@@ -334,6 +334,7 @@ main {
   display: none;
 }
 
+.kanban-mobile-options:focus + .kanban-dropdown,
 .kanban-dropdown[data-show] {
   display: block;
   position: absolute;
