--- a/web/base.css
+++ b/web/base.css
@@ -13,6 +13,8 @@
   --colour-accent-text: #a46600;
   --colour-highlight: #fff;
 
+
+  --colour-light-grey:#C7C7C7;
   --colour-mid-grey: #a6acbe;
 
   --colour-red: #e32020bf;
