User profile page is now basically finished for mobile development

--- a/web/profile/style.css
+++ b/web/profile/style.css
@@ -1,5 +1,40 @@
+:root{
+  --colour-red-logout:#DA0000;
+}
+
+.logout-btn{
+  width: 60px;
+  height: 20px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  margin:auto;
+  
+
+  background: var(--colour-red-logout);
+  box-shadow: 0px 4px 4px var(--card-shadow);
+  border-radius: 7px;
+}
+
+.invite-btn {
+  width: 54px;
+  height: 19.85px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+
+  float:right;
+
+  background: var(--colour-accent);
+  box-shadow: 0px 4px 4px var(--card-shadow);
+  border-radius: 7px;
+}
 
 
+.email-lock-img{
+  float:right;
+  padding-right: 10px;
+}
 
 .h1{
   line-height: 0.1rem;
