mobile nav minor visual changes

--- a/web/base.css
+++ b/web/base.css
@@ -130,6 +130,7 @@ body > main {
 }
 
 .side-menu li {
+  position: relative;
   width: 100%;
   margin: auto;
   text-align: center;
@@ -139,10 +140,31 @@ body > main {
   color: var(--colour-text);
   text-decoration: none;
   display: flex;
-  justify-content: center;
+  justify-content: left;
   align-items: center;
   padding: 1rem;
   font-size: 1.2em;
+}
+
+@media (max-width: 768px) {
+  .side-menu ul {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  /* line between links that aren't the last */
+  .side-menu li:not(:last-child)::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin-inline: 1.5rem;
+    margin-top: 0.5rem;
+    height: 0.25rem;
+    background-color: var(--colour-text);
+    border-radius: 100vmax;
+  }
 }
 
 .side-menu li[data-active] {
@@ -152,6 +174,10 @@ body > main {
 
 .side-menu li[data-active] a {
   color: var(--colour-accent);
+}
+
+.nav-description {
+  margin-left: 0.5rem;
 }
 
 @media (min-width: 768px) {
