--- a/web/client/style.css
+++ b/web/client/style.css
@@ -14,6 +14,7 @@
 
 .text-center-positioning {
   margin: 1rem 0 1rem 0;
+  text-align: center;
 }
 
 .card-small-image {
@@ -56,13 +57,10 @@
 
 .client-details-wrap {
   display: grid;
-  /* grid-template-columns: 1fr 1fr; */
   grid-template-columns: repeat(auto-fit, minmax(35ch, 1fr));
   gap: 1rem;
   justify-items: center;
   margin: 1rem 1rem; /* top right bottom left */
-  /* grid-auto-rows: 50%;
-  height: 100vh; */
 }
 
 .card-bigger {
