--- a/web/base.css
+++ b/web/base.css
@@ -301,19 +301,23 @@ body > main {
 }
 
 /* kanban card top border colour (if not overwritten, defaults to colour-accent) */
+.rag-band,
 .kanban-section .card-small {
   border-top: 0.25rem solid var(--colour-card-highlight, var(--colour-accent));
 }
 
 /* RAG colours */
+[data-rag="red"],
 .kanban-section:nth-of-type(1) .card-small {
   --colour-card-highlight: var(--colour-red);
 }
 
+[data-rag="amber"],
 .kanban-section:nth-of-type(2) .card-small {
   --colour-card-highlight: var(--colour-amber);
 }
 
+[data-rag="green"],
 .kanban-section:nth-of-type(3) .card-small {
   --colour-card-highlight: var(--colour-green);
 }
