posts are a thing, search page gets all the current posts and dynamically adds them. Needs searching

--- a/web/base.css
+++ b/web/base.css
@@ -489,6 +489,11 @@ input[type="checkbox"]:checked + label {
   justify-content: center;
 }
 
+a.btn-action {
+  color: var(--colour-highlight);
+  text-decoration: none;
+}
+
 .btn-action :not(span) {
   display: none;
 }
