search pages use the same css for search box

--- a/web/knowledge/style.css
+++ b/web/knowledge/style.css
@@ -24,36 +24,13 @@ h4 {
   margin: 0;
 }
 
-.dropdown-topic {
-  background-color: var(--colour-highlight);
-  width: fit-content;
-  margin: 0.5rem 1.6rem;
-  cursor: pointer;
-}
-
-.search-box {
-  background-color: var(--colour-highlight);
-  border: none;
-  padding: 0.75rem;
-  width: 75%;
-  box-shadow: var(--card-shadow);
-  border-radius: 0.5rem;
-}
-
-.search-form {
-  width: 70%;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-}
-
-.search-form > *:not(.btn-action) {
-  font-size: 1.5em;
+.search > * {
   margin-top: 0.75rem;
   margin-bottom: 0.75rem;
 }
-
-.search-form .btn-action {
+.search > *:not(.btn-action) {
+  font-size: 1.5em;
+}
+.search .btn-action {
   font-size: 2em;
 }
