--- a/web/knowledge/search/style.css
+++ b/web/knowledge/search/style.css
@@ -50,40 +50,21 @@
   width: fit-content;
 }
 
-/*i know these are in the other style.css but i cannot be bothered to link them as it's easier to just stick them here :) */
-.dropdown-topic {
-  background-color: var(--colour-highlight);
-
-  width: fit-content;
-  font-size: 1rem;
-
-  border: 0.2rem solid;
-
-  margin: 0.5rem;
-  box-shadow: var(--card-shadow);
-  border-color: var(--colour-accent);
-  border-radius: 0.5rem;
-  color: var(--colour-text);
-  cursor: pointer;
-
-  display: flex;
-  align-items: center;
-  text-align: center;
-  justify-content: center;
-}
-
-.search-box {
-  background-color: var(--colour-highlight);
-  border: none;
-  font-size: 1rem;
-  padding: 0.25rem;
-  width: 60%;
-  box-shadow: var(--card-shadow);
-  border-radius: 0.5rem;
-}
-
+/* Search Box */
 .search {
-  display: flex;
-  padding: 1rem;
-  flex-wrap: nowrap;
+  justify-content: flex-start;
+  width: 100%;
+  margin-top: 1rem;
+}
+.search-box {
+  width: 50%;
+}
+
+@media (max-width: 768px) {
+  .search {
+    justify-content: center;
+  }
+  .search-box {
+    width: 90%;
+  }
 }
