my project w/ link to proj page + icon for leader

--- a/web/dashboard/style.css
+++ b/web/dashboard/style.css
@@ -13,3 +13,8 @@
 .myprojects-wrapper .card-small {
   margin-inline: auto;
 }
+
+.icon-link {
+  text-decoration: none;
+  justify-content: center !important;
+}
