--- a/web/knowledge/style.css
+++ b/web/knowledge/style.css
@@ -9,7 +9,9 @@ main {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 97%;
+  box-sizing: border-box;
+  width: calc(100%);
+  margin: 0 !important;
 }
 
 h3 {
