--- a/web/profile/style.css
+++ b/web/profile/style.css
@@ -17,13 +17,15 @@
   background: rgba(0, 0, 0, 0.5);
   
 }
-
-
-
-
-
-
-
+#password-form input {
+  background: var(--colour-highlight);
+  border: 1px solid var(--colour-accent);
+  border-radius: 8px;
+  width: 75%;
+  font-size: 1.2rem;
+  padding: 0.5rem;
+  margin: 0.6rem;
+}
 
 
 
