--- a/web/knowledge/search/base.css
+++ b/web/knowledge/search/base.css
@@ -18,6 +18,8 @@
 .dropdown-topic {
   background-color: var(--colour-highlight);
   width: fit-content;
+  max-width: 35%;
+  /* added this as it stops large topic names going off screen */
   margin: 0.5rem;
   cursor: pointer;
 }
